增加最小宽度限制

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 section{
   min-height: 100vh;
   width: 100%;
+  min-width: 550px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +22,7 @@ section.dark{
 }
 section .container{
   display: flex;
-  align-items center;
+  align-items: center;
   justify-content: center;
   height: 220px;
   max-width: 560px;
